--- a/index.html
+++ b/index.html
@@ -7,16 +7,23 @@
     <title>Mídia Review</title>
 </head>
 <body>
-    <nav>
-        <div class="nav-wrapper">
-            <img src="https://static.wikia.nocookie.net/ptstarwars/images/c/cc/Star-wars-logo-new-tall.jpg/revision/latest?cb=20190525165732" class="brand-logo"></img>
-            <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="sass.html">Sass</a></li>
-                <li><a href="badges.html">Components</a></li>
-                <li><a href="collapsible.html">JavaScript</a></li>
-            </ul>
+    <header>
+        <div class="nav-header-geral">
+            <img src="C:\Users\lucas\OneDrive\Desktop\ProjetoDev\MidiaReview\Imagens\mediareview_branco_horizonte.png" class="logo"></img>
+            <div class="header-centro">
+                <ul class="centro">
+                 <li><a href="sass.html">FILMES</a></li>
+                 <li><a href="series.html">SERIES</a></li>
+                 <li><a href="jogos.html">JOGOS</a></li>
+                 <li><a href="especial.html">ESPECIAL SEMANAL</a></li>
+                </ul>
+            </div>
+            <div class="botoes-direita">
+                <button id="userButton">🧛 ⚙️</button>
+                <button id="darkModeButton">☀ ☽</button>
+            </div>
         </div>
-    </nav>
+    </header>
 </body>
 <script src="./app.js"></script>
 </html>
