--- a/index.html
+++ b/index.html
@@ -4,26 +4,63 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
     <title>Mídia Review</title>
 </head>
 <body>
-    <header>
-        <div class="nav-header-geral">
-            <img src="C:\Users\lucas\OneDrive\Desktop\ProjetoDev\MidiaReview\Imagens\mediareview_branco_horizonte.png" class="logo"></img>
-            <div class="header-centro">
-                <ul class="centro">
-                 <li><a href="sass.html">FILMES</a></li>
-                 <li><a href="series.html">SERIES</a></li>
-                 <li><a href="jogos.html">JOGOS</a></li>
-                 <li><a href="especial.html">ESPECIAL SEMANAL</a></li>
-                </ul>
-            </div>
-            <div class="botoes-direita">
-                <button id="userButton">🧛 ⚙️</button>
-                <button id="darkModeButton">☀ ☽</button>
-            </div>
+    <header class="nav-header-geral">
+        <img src="C:\Users\lucas\OneDrive\Desktop\ProjetoDev\MidiaReview\Imagens\mediareview_branco_horizonte-removebg-preview.png" class="logo"></img>
+        <div class="header-centro">
+            <ul class="centro">
+                <li><a href="sass.html">FILMES</a></li>
+                <li><a href="series.html">SERIES</a></li>
+                <li><a href="jogos.html">JOGOS</a></li>
+                <li><a href="especial.html">ESPECIAL SEMANAL</a></li>
+            </ul>
+        </div>
+        <div class="botoes-direita">
+            <button id="userButton"> <span class="material-symbols-outlined">
+                account_circle
+                </span><span class="material-symbols-outlined">
+                settings
+                </span></button>
+            <button id="darkModeButton"><span class="material-symbols-outlined">
+                dark_mode
+                </span></button>
         </div>
     </header>
+
+    <footer >
+        <div class="footer-redesocial">
+            <img src="C:\Users\lucas\OneDrive\Desktop\ProjetoDev\MidiaReview\Imagens\mediareview_preto_horizonte-removebg-preview.png" class="logo-social"></img>
+            <div>
+                <i class="fab fa-instagram"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-whatsapp"></i>
+                <i class="fab fa-facebook-square"></i>
+             </div>
+        </div>
+        <div class="footer-opcoes">
+            <div>
+                <ul>
+                    <p>© 2024 Lucas Tech.<br>Todos os direitos reservados</p>
+                </ul>
+            </div>
+            <div class="footer-ajuda">
+                <ul class= "ajuda">
+                    <li><a href="cookies.html">Consumo Responsável</a></li>
+                    <li><a href="cookies.html">Ouvidoria</a></li>
+                    <li><a href="cookies.html">Contato</a></li>
+                    <li><a href="cookies.html">MoviDesk</a></li>
+                    <li><a href="cookies.html">Cookies</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 <script src="./app.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
 </html>
