--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
         </div>
 
     </header>
+    <!-- Sistema de estrelas por midia "Rank de perguntas com a somatorias das estrelas no final" -->
+    <!-- Estrelas dos visitante do site "Rank de perguntas com a somatorias das estrelas no final" -->
     <!-- Carrossel de filmes em cartaz -->
     <section class="conteudo-secao">
 
@@ -93,9 +95,6 @@
                 <button class="saiba-mais">Saiba mais</button>
             </div>
 
-        </div>
-
-        <div class="conteudo-fila">
             <div class="card">
                 <img src="Imagens/FightClub.jpeg" style="width: 100%;">
                 <h2>Clube da Luta</h2>
@@ -154,7 +153,7 @@
                 <h2>The Office</h2>
                 <p>Esta adaptação americana se passa em uma empresa de papel em Scranton, Pensilvânia e tem um estilo de documentário semelhante ao original britânico estrelado por Ricky Gervais. Mostra a equipe da Dunder-Mifflin, que inclui personagens baseados no original britânico (e, provavelmente, em pessoas com quem você trabalha em seu escritório). Temos Jim, o simpático empregado que tem um pouco de todo homem. Jim sente uma atração pela recepcionista promovida a representante de vendas Pam (pois romances de escritório são sempre uma boa ideia). Temos também Dwight, o colega de trabalho bem-sucedido que carece de habilidades sociais e bom senso. E há ainda Ryan, ex-estagiário que trabalha temporariamente na matriz em Nova York antes de ret   ornar a Scranton.</p>
                 <div class="container-tags">
-                    <Button class="tagfilme"> #Sitcom </Button>
+                    <Button class="tagseries"> #Sitcom </Button>
                 </div>
                 <button class="saiba-mais">Saiba mais</button>
             </div>
@@ -164,7 +163,7 @@
                 <h2>Game of Thrones</h2>
                 <p>Sucesso entre os livros mais vendidos, a série de obras "A Song of Ice and Fire", de George R.R. Martin, é levada à tela quando HBO decide navegar a fundo pelo gênero e recriar a fantasia medieval épica. Este é o retrato de duas famílias poderosas - reis e rainhas, cavaleiros e renegados, homens honestos e mentirosos - disputando um jogo mortal pelo controle dos Sete Reinos de Westeros para assumir o Trono de Ferro. A série foi filmada em Malta e no norte da Irlanda, tendo participação do escritor dos livros.</p>
                 <div class="container-tags">
-                    <Button class="tagfilme"> #Drama </Button>
+                    <Button class="tagseries"> #Drama </Button>
                 </div>
                 <button class="saiba-mais">Saiba mais</button>
             </div>
@@ -174,7 +173,7 @@
                 <h2>Breaking Bad</h2>
                 <p>O professor de química Walter White não acredita que sua vida possa piorar ainda mais. Quando descobre que tem câncer terminal, Walter decide arriscar tudo para ganhar dinheiro enquanto pode, transformando sua van em um laboratório de metanfetamina.</p>
                 <div class="container-tags">
-                    <Button class="tagfilme"> #Drama </Button>
+                    <Button class="tagseries"> #Drama </Button>
                 </div>
                 <button class="saiba-mais">Saiba mais</button>
             </div>
@@ -184,20 +183,17 @@
                 <h2>Sons of Anarchy</h2>
                 <p>Uma gangue de motoqueiros segue suas próprias leis e comanda, por debaixo dos panos, o tráfico de armas na região da aparentemente pacata da cidade de Charming, protegendo-a contra forasteiros hostis.</p>
                 <div class="container-tags">
-                    <Button class="tagfilme"> #Drama </Button>
+                    <Button class="tagseries"> #Drama </Button>
                 </div>
                 <button class="saiba-mais">Saiba mais</button>
             </div>
 
-        </div>
-
-        <div class="conteudo-fila">
             <div class="card">
                 <img src="Imagens/narcos.jpeg" style="width: 100%;">
                 <h2>Narcos</h2>
                 <p>A série conta a história verdadeira da propagação da cocaína nos Estados Unidos e na Europa, graças à droga do Cartel de Medellín, liderado por Pablo Escobar, enquanto dois agentes da DEA estão no comando de liderar uma missão para capturar e, consequentemente, matar Escobar.</p>
                 <div class="container-tags">
-                    <Button class="tagfilme"> #Drama </Button>
+                    <Button class="tagseries"> #Drama </Button>
                 </div>
                 <button class="saiba-mais">Saiba mais</button>
             </div>
@@ -207,7 +203,7 @@
                 <h2>The Bear</h2>
                 <p>Carmy luta para transformar a lanchonete da família e a si mesmo enquanto trabalha ao lado de uma equipe rude e difícil que acaba se revelando como sua família escolhida.</p>
                 <div class="container-tags">
-                    <Button class="tagfilme"> #Drama </Button>
+                    <Button class="tagseries"> #Drama </Button>
                 </div>
                 <button class="saiba-mais">Saiba mais</button>
             </div>
@@ -217,7 +213,7 @@
                 <h2>Demolidor</h2>
                 <p>Matt Murdock foi vítima de um acidente que o deixou cego quando adolescente, mas que também o dotou de superpoderes sensoriais. Formado em Direito, Matt passa a lutar contra todas as formas de injustiça: como advogado e super-herói.</p>
                 <div class="container-tags">
-                    <Button class="tagfilme"> #Ação </Button>
+                    <Button class="tagseries"> #Ação </Button>
                 </div>
                 <button class="saiba-mais">Saiba mais</button>
             </div>
@@ -227,7 +223,7 @@
                 <h2>Arremesso Final</h2>
                 <p>O documentário acompanha a temporada de 1997-98 dos Bulls do início ao fim, além de cobrir o restante da notável carreira de Michael Jordan. Conheça a lenda desde quando ele era uma estrela emergente até se tornar uma força de marketing mundial.</p>
                 <div class="container-tags">
-                    <Button class="tagfilme"> #Documentário </Button>
+                    <Button class="tagseries"> #Documentário </Button>
                 </div>
                 <button class="saiba-mais">Saiba mais</button>
             </div>
@@ -246,7 +242,7 @@
                 <h2>Naruto Shippuden</h2>
                 <p>Uzumaki Naruto quer ser o melhor ninja de todos. Ele está indo muito bem, mas com o perigo iminente imposto pela misteriosa Akatsuki, Naruto percebe que ele deve treinar mais que nunca e deixa sua vila para um intenso treinamento que o pressiona contra seus limites.</p>
                 <div class="container-tags">
-                    <Button class="tagfilme"> #Aventura </Button>
+                    <Button class="taganime"> #Aventura </Button>
                 </div>
                 <button class="saiba-mais">Saiba mais</button>
             </div>
@@ -256,7 +252,7 @@
                 <h2>Invencível</h2>
                 <p>O pai de Mark Grayson é o super-herói mais poderoso do planeta, Omni-Man. Assim, como ele, o jovem desperta seus poderes e, junto a uma série de outros campeões, tenta honrar o legado de seu pai. Mas Omni-Man esconde um segredo sinistro.</p>
                 <div class="container-tags">
-                    <Button class="tagfilme"> #Ação </Button>
+                    <Button class="taganime"> #Ação </Button>
                 </div>
                 <button class="saiba-mais">Saiba mais</button>
             </div>
@@ -266,9 +262,9 @@
                 <h2>Mob Psycho 100</h2>
                 <p>Kageyama Shigeo, o Mob, é um garoto que não leva muito jeito pra se expressar, mas que é um poderoso telepata. Decidido a levar uma vida normal, Mob suprime seus poderes, mas quando suas emoções atingem um pico de 100%, algo terrível lhe acontece.</p>
                 <div class="container-tags">
-                    <Button class="tagfilme"> #Ação </Button>
-                    <Button class="tagfilme"> #Comédia </Button>
-                    <Button class="tagfilme"> #Ficção supernatural </Button>
+                    <Button class="taganime"> #Ação </Button>
+                    <Button class="taganime"> #Comédia </Button>
+                    <Button class="taganime"> #Ficção supernatural </Button>
                 </div>
                 <button class="saiba-mais">Saiba mais</button>
             </div>
@@ -278,20 +274,17 @@
                 <h2>Os Cavaleiros do Zodíaco</h2>
                 <p>Não muito tempo depois da batalha entre os Cavaleiros e Poseidon, o deus do Mundo dos Mortos, Hades, é ressuscitado e parte para matar Atena e dominar o mundo. Com a ajuda dos Cavaleiros de Ouro e Prata ressuscitados, Hades envia seu exército para atacar o Santuário e capturar Atena. Agora Seiya e seus companheiros Cavaleiros de Bronze entram nesta batalha proibida que será a mais feroz de todas, a Guerra Santa de Atena contra Hades.</p>
                 <div class="container-tags">
-                    <Button class="tagfilme"> #Aventura </Button>
+                    <Button class="taganime"> #Aventura </Button>
                 </div>
                 <button class="saiba-mais">Saiba mais</button>
             </div>
 
-        </div>
-
-        <div class="conteudo-fila">
             <div class="card">
                 <img src="Imagens/Apenas-um-Show.jpeg" style="width: 100%;">
                 <h2>Apenas um Show</h2>
                 <p>Mordecai e Rigby são guardas de um parque. Mas esses melhores amigos são preguiçosos e não deixam o trabalho interferir com sua capacidade de se divertir. Enquanto Mordecai tenta ser responsável e fazer um bom trabalho, é frequentemente desencaminhado por seu imaturo companheiro, totalmente imune à vergonha ou ao medo e sem nenhum limite. Os amigos acabam sempre pagando pelas suas ações irresponsáveis, pois se metem em mais confusões do que esperavam. A negligência no trabalho causa muito desgosto ao chefe temperamental da dupla, Benson.</p>
                 <div class="container-tags">
-                    <Button class="tagfilme"> #Sitcom </Button>
+                    <Button class="taganime"> #Sitcom </Button>
                 </div>
                 <button class="saiba-mais">Saiba mais</button>
             </div>
@@ -301,7 +294,7 @@
                 <h2>Dragon Ball Z</h2>
                 <p>As aventuras de um poderoso guerreiro chamado Goku, seu filho Gohan e seus aliados, que se esforçam para defender a Terra das ameaças. Eles são auxiliados por um dragão que concede os desejos de quem quer que reúna as sete Esferas do Dragão.</p>
                 <div class="container-tags">
-                    <Button class="tagfilme"> #Aventura </Button>
+                    <Button class="taganime"> #Aventura </Button>
                 </div>
                 <button class="saiba-mais">Saiba mais</button>
             </div>
@@ -311,7 +304,7 @@
                 <h2>X-Men '97</h2>
                 <p>X-Men '97 é uma série de animação americana criada por Beau DeMayo para o serviço de streaming Disney+, baseada na equipe de super-heróis da Marvel Comics, os X-Men. É um Revival de X-Men, continuando a história dos X-Men que enfrentam novos desafios após a perda de seu líder, o Professor X.</p>
                 <div class="container-tags">
-                    <Button class="tagfilme"> # Ação </Button>
+                    <Button class="taganime"> # Ação </Button>
                 </div>
                 <button class="saiba-mais">Saiba mais</button>
             </div>
@@ -321,8 +314,8 @@
                 <h2>Dr. Stone</h2>
                 <p>Milhares de anos após um misterioso fenômeno transformar a humanidade inteira em pedra, desperta um garoto extraordinariamente inteligente e motivado pela ciência - Senku Ishigami. Diante de um mundo de pedra e do colapso generalizado da civilização, Senku decide usar sua mente para reconstruir o mundo. Ao lado de Taiju Oki, seu amigo de infância absurdamente forte, eles começam a reestabelecer a civilização do zero... Representando os dois milhões de anos da história da ciência, desde a Idade da Pedra até os dias atuais, esta aventura científica sem precedentes está prestes a começar!</p>
                 <div class="container-tags">
-                    <Button class="tagfilme"> #Ficção pós-apocalíptica </Button>
-                    <Button class="tagfilme"> #Ficção científica </Button>
+                    <Button class="taganime"> #Ficção pós-apocalíptica </Button>
+                    <Button class="taganime"> #Ficção científica </Button>
                 </div>
                 <button class="saiba-mais">Saiba mais</button>
             </div>
@@ -341,8 +334,8 @@
                 <h2>Call of Duty: Modern Warfare</h2>
                 <p>Call of Duty: Modern Warfare é um jogo eletrônico de tiro em primeira pessoa produzido pela Infinity Ward. Foi publicado pela Activision em 25 de outubro de 2019 para Microsoft Windows, PlayStation 4 e Xbox One. É o decimo sexto jogo da serie Call of Duty e actua como um "soft reboot" da sub-serie Modern Warfare.</p>
                 <div class="container-tags">
-                    <Button class="tagfilme"> #Tiro em primeira pessoa </Button>
-                    <Button class="tagfilme"> #Aventura </Button>
+                    <Button class="tagjogos"> #Tiro em primeira pessoa </Button>
+                    <Button class="tagjogos"> #Aventura </Button>
                 </div>
                 <button class="saiba-mais">Saiba mais</button>
             </div>
@@ -352,7 +345,7 @@
                 <h2>Minecraft</h2>
                 <p>Minecraft é um jogo em que você constrói coisas com blocos, em um mundo virtual aberto e livre para explorar. É o que os gamers chamam de 'sandbox', porque funciona mesmo como uma caixa de areia, em que o único limite para o jogador é a própria imaginação e a prática.</p>
                 <div class="container-tags">
-                    <Button class="tagfilme"> #Aventura </Button>
+                    <Button class="tagjogos"> #Aventura </Button>
                 </div>
                 <button class="saiba-mais">Saiba mais</button>
             </div>
@@ -362,8 +355,8 @@
                 <h2>Fortnite</h2>
                 <p>No Battle Royale do Fortnite, salte do Ônibus de Batalha e pouse na Ilha para entrar na batalha e tentar ser o último sobrevivente. Ou forme equipe com amigos e outros jogadores para durar mais que as outras equipes. Use o poder da madeira, da pedra e do metal para construir estruturas que vão ajudar você na batalha.</p>
                 <div class="container-tags">
-                    <Button class="tagfilme"> #Battle royale </Button>
-                    <Button class="tagfilme"> #Aventura </Button>
+                    <Button class="tagjogos"> #Battle royale </Button>
+                    <Button class="tagjogos"> #Aventura </Button>
                 </div>
                 <button class="saiba-mais">Saiba mais</button>
             </div>
@@ -373,21 +366,18 @@
                 <h2>The Witcher III</h2>
                 <p>Em um mundo devastado pela guerra, com a Caçada Selvagem te perseguindo, você assumirá seu contrato mais importante: rastrear a criança da profecia, uma chave e uma arma que pode salvar ou destruir tudo.</p>
                 <div class="container-tags">
-                    <Button class="tagfilme"> #RPG </Button>
-                    <Button class="tagfilme"> #Aventura </Button>
+                    <Button class="tagjogos"> #RPG </Button>
+                    <Button class="tagjogos"> #Aventura </Button>
                 </div>
                 <button class="saiba-mais">Saiba mais</button>
             </div>
 
-        </div>
-
-        <div class="conteudo-fila">
             <div class="card">
                 <img src="Imagens/ValorantPoster.jpeg" style="width: 100%;">
                 <h2>Valorant</h2>
                 <p>Valorant se aproveita de um tipo de jogo que está em alta no momento. Trata-se de um FPS tático em que cinco jogadores batalham contra outros cinco visando plantar ou desarmar a chamada Spike. Cada player tem apenas uma única vida por rodada (em um total de 25) e a equipe que ganhar 13 rodadas primeiro se consagra como a vencedora.</p>
                 <div class="container-tags">
-                    <Button class="tagfilme"> #Jogo de tiro tático </Button>
+                    <Button class="tagjogos"> #Jogo de tiro tático </Button>
                 </div>
                 <button class="saiba-mais">Saiba mais</button>
             </div>
@@ -397,8 +387,8 @@
                 <h2>Red Dead Redemption 2</h2>
                 <p>Estados Unidos, 1899. O fim da era do velho oeste se aproxima, e os xerifes caçam as últimas gangues fora da lei. Quem não se rende ou sucumbe, acaba morto. Depois de tudo dar errado em um roubo na cidade de Blackwater, no faroeste, Arthur Morgan e a gangue Van der Linde são obrigados a fugir.</p>
                 <div class="container-tags">
-                    <Button class="tagfilme"> #Faroeste </Button>
-                    <Button class="tagfilme"> #Ação-Aventura </Button>
+                    <Button class="tagjogos"> #Faroeste </Button>
+                    <Button class="tagjogos"> #Ação-Aventura </Button>
                 </div>
                 <button class="saiba-mais">Saiba mais</button>
             </div>
@@ -408,8 +398,8 @@
                 <h2>Grand Theft Auto V</h2>
                 <p>O jogo se passa no estado ficcional de San Andreas, com a história da campanha um jogador seguindo três criminosos e seus esforços para realizarem assaltos sob a pressão de uma agência governamental. O mundo aberto permite que os jogadores naveguem livremente pelas áreas rurais e urbanas de San Andreas.</p>
                 <div class="container-tags">
-                    <Button class="tagfilme"> #Ação </Button>
-                    <Button class="tagfilme"> #Aventura </Button>
+                    <Button class="tagjogos"> #Ação </Button>
+                    <Button class="tagjogos"> #Aventura </Button>
                 </div>
                 <button class="saiba-mais">Saiba mais</button>
             </div>
@@ -419,8 +409,8 @@
                 <h2>The Last of Us</h2>
                 <p>Joel, um sobrevivente duro e cínico, e a jovem e impetuosa Ellie se conectam pela dificuldade do mundo em que vivem. Juntos, eles enfrentam circunstâncias brutais e monstros impiedosos durante uma difícil jornada pelos EUA após um surto apocalíptico.</p>
                 <div class="container-tags">
-                    <Button class="tagfilme"> #Ação </Button>
-                    <Button class="tagfilme"> #Drama </Button>
+                    <Button class="tagjogos"> #Ação </Button>
+                    <Button class="tagjogos"> #Drama </Button>
                 </div>
                 <button class="saiba-mais">Saiba mais</button>
             </div>
@@ -466,6 +456,8 @@
 
     </footer>
 </body>
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="./app.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
